Adding the directive for showing the seat matrix

--- a/app.less
+++ b/app.less
@@ -6,6 +6,7 @@
 /* Component LESS */
 @import "partial/home/home.less";
 @import "partial/seatSelection/seatSelection.less";
+@import "directive/seat-matrix/seat-matrix.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
