Adding modal window to show the message

--- a/app.less
+++ b/app.less
@@ -7,6 +7,7 @@
 @import "partial/home/home.less";
 @import "partial/seatSelection/seatSelection.less";
 @import "directive/seat-matrix/seat-matrix.less";
+@import "partial/checkout-modal/checkout-modal.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
